<resources>
    <string name="app_name">11_TaskTimer_App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="add_edit_fragment_label">Add Edit Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menutitle_addTask">Add TaskTimer</string>
    <string name="menutitle_about">About</string>
    <string name="menutitle_showdurations">Durations Report</string>
    <string name="menutitle_settings">Settings</string>
    <string name="menumain_generatedata">Generate Data</string>
    <string name="notask_selected">No Task Selected</string>
    <string name="edit_btn_description">Button to edit the task details</string>
    <string name="delete_btn_description">Button to delete the task details</string>
    <string name="addedit_name_hint">Task name: required</string>
    <string name="add_edit_desciption_hint">Task description (optional)</string>
    <string name="add_edit_sort">Order: sorts low to high</string>
    <string name="addEditBtnSave">SAVE</string>
    <string name="empty_instruction_title">Instructions</string>
    <string name="empty_instruction_description">Tasks with the lower sort orders will be placed higher up the list.
                    Tasks with the same sort Order will be sorter aplhpabetically
                    Tapping a task will start the timer for that tasks and will stoip the timer foir any task
                    Each task has a Edit and Deleter buttons if you want to change the details or remove</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="del_diag_message">Deleting will also delete all timing data associated with the task id %1$d: %2$s.</string>
    <string name="canelEditDiag_message">Abandon changes</string>
    <string name="continueEditDiag_message">Continue editing</string>
    <string name="about_email">For support, email tasktimer.learnprogramming@gmail.com</string>
    <string name="about_cedits">Icon derived from <b> analog clock </b> at openclipart.org by <b> Anonymous</b></string>


    <string name="about_weblink_21">Instructions available at www.learnprogramming.academy  </string>
    <!--Versions below 21 won't automatically open the links  -->
    <string name="about_weblink">Instructions available at</string>
    <string name="about_url"><u>"https://www.learnprogramming.academy.com"</u> </string>
</resources>
