<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vcmanea.a11_tasktimer_app.activities.MainActivity">

    <item
        android:id="@+id/menumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/menutitle_addTask"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menumain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="20"
        android:title="@string/menutitle_showdurations"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menumain_showSettings"
        android:orderInCategory="30"
        android:title="@string/menutitle_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_showAbout"
        android:orderInCategory="40"
        android:title="@string/menutitle_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menumain_generate"
        android:orderInCategory="50"
        android:title="@string/menumain_generatedata"
        android:visible="false"
        app:showAsAction="never" />


</menu>
